--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="google-adsense-account" content="ca-pub-2983021551853617">
         <meta name="description" content="The Best website for unblocked games!">
         <meta name="keywords" content="Games,Unblocked Games,Unity,WebGL,Unblocked,Google Sites,parshwa's game hub,parshwa's unblocked games,parshwa's games unblocked">
-        <meta name="author" content="Parshwa Shah">
+        <meta name="author" content="Clyde Biby">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Parshwa's Game Hub</title>
         <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
@@ -16,7 +16,7 @@
 
       <body>
          <div class="heading">
-          <h1>Parshwa's Game Hub</h1>
+          <h1>Clydes's Game Hub</h1>
          </div>
         <br><br><br><br>
         <div>
