--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <body>
          <div class="heading">
-          <h1>Andres you owe me</h1>
+          <h1>Cool not math games</h1>
          </div>
         <br><br><br><br>
         <div>
